Fix [Jobs] Results: content overflow (#120)

--- a/src/components/Table/table.scss
+++ b/src/components/Table/table.scss
@@ -93,7 +93,7 @@
 
     &__item {
       @include tableDet;
-      @include tableHeader;
+      @include tableHeader(0);
 
       flex: 1;
 
